# acdc-torch

./: ACDC.lua  CMakeLists.txt  DCT.lua  DiagonalProduct.lua  FastACDC.lua  FastACDC_grouped.lua  IDCT.lua  LICENSE  Permutation.lua  README.md  acdc-scm-1.rockspec  init.lua  test.lua  test_fast.lua
cpu/: DCT.cpp  DCT_impl.cpp  InitCPU.cpp  Permutation.cpp  Permutation_impl.cpp
gpu/: InitGPU.cu  Permutation.cu  Permutation_impl.cu  acdc_wrapper.cu  cutorch_state.cu  cutorch_state.h  fft_custom_layers2.cu
include/: complex_util.hpp  cuda_util.hpp  cufft.hpp  cufft_impl.hpp  fftw.hpp  fftw_impl.hpp
